alignment fixed for contact number field

--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -43,6 +43,12 @@ input[type="text"]{
   }
 }
 
+.contact-num{
+  input{
+    height: 50px !important;
+  }
+}
+
 .form-heading-multi {
   line-height: 36px;
 }
